fix(calendar): avoid tooltip flickering on inverted disabled cell

--- a/src/definitions/modules/calendar.less
+++ b/src/definitions/modules/calendar.less
@@ -121,7 +121,7 @@
   right: 0;
 }
 
-.ui.calendar .ui.table tr .disabled {
+.ui.ui.calendar .ui.table tr .disabled {
   pointer-events: auto;
   cursor: default;
   color: @disabledTextColor;
